--- a/app.json
+++ b/app.json
@@ -3,9 +3,22 @@
     "name": "bookface",
     "slug": "bookface",
     "version": "1.0.0",
+    "icon": "./assets/icon.png",
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#ffffff"
+      },
+      "package": "com.gabrieldierks.facebook"
+    },
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "888444da-03b5-4a71-9a27-2deb17330a08"
+      }
+    }
   },
   "name": "bookface"
 }
